fix: update modal form spacing, checkbox border-radius and transition syntax

--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,7 @@ p {
 
 .subscribe-title {
   margin-bottom: 16px;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -608,8 +608,8 @@ p {
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: #E7E9FC;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+              fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .close-popup:hover,
@@ -631,7 +631,7 @@ color: #2E2F42;
 margin-bottom: 16px;
 }
 .field-wrapper {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 .field-wrapper-inner {
   position: relative;
@@ -662,7 +662,7 @@ margin-bottom: 24px;
 width: 100%;
 height: 40px;
 border: 1px solid rgba(46, 47, 66, 0.4);
-transition: border-color 250ms ease-in;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border-radius: 4px;
 padding: 0 10px 0 38px;
 font-weight: 400;
@@ -749,6 +749,7 @@ fill: #4D5AE5;
   height: 16px;
   width: 16px;
   margin-right: 8px;
+  border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
